--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -12,6 +12,6 @@
     src:
             url(./Raleway-ExtraBold.woff2) format('woff2'),
             url(./Raleway-ExtraBold.woff) format('woff');
-    font-weight: 800;
+    font-weight: bold;
     font-display: swap;
 }
